<resources>
    <string name="app_name">OpenReden</string>
    <string name="from">from</string>
    <string name="company_name">ZineddineBtc</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="by_creating_an_account_you_agree_on">By creating an account, you are agreeing on our</string>
    <string name="register_now">Register now</string>
    <string name="new_here">New here?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="invalid_input">Invalid input</string>
    <string name="login_failed">Login failed</string>
    <string name="already_registered">Already registered?</string>
    <string name="register">Register</string>
    <string name="register_failed">Register failed</string>
    <string name="insufficient_password">Password must contain more than 7 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_taken">Username taken</string>
    <string name="username">Username</string>
    <string name="finish">Finish</string>
    <string name="set_up_profile">Set up Profile</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="invalid_name">Invalid name</string>
    <string name="empty_bio">Empty bio</string>
    <string name="no_photo_selected">No photo is selected</string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sign_out">Sign out</string>
    <string name="error">Error</string>
    <string name="view_picture">View Picture</string>
    <string name="upload_a_new_picture">Upload a new picture</string>
    <string name="delete">Delete</string>
    <string name="insufficient_username">Username must contain more than 4 characters</string>
    <string name="pictures">Pictures</string>
    <string name="no_pictures_to_display">No pictures to display</string>
    <string name="no_conversations_to_display">No conversations to display</string>
    <string name="random_name">Leonardo</string>
    <string name="random_message">Hey</string>
    <string name="random_time">13:30 PM</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="no_results">No results</string>
    <string name="random_username">\@Leo_dv</string>
    <string name="message">Message</string>
    <string name="aa">Aa</string>
    <string name="interlocutor">Interlocutor</string>
    <string name="three_dots">...</string>
    <string name="general_time">99:99 MM</string>
    <string name="invalid_city">Invalid country</string>
    <string name="random_city">Frankfurt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seen">seen</string>
    <string name="country">Country</string>
    <string name="unspecified_country">Country not specified</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are you sure you want to delete this message?</string>
</resources>
