<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/parentLayout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/interlocutorIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_account_circle_grey"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/interlocutorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interlocutor"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lastMessageContentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_dots"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/lastMessageTimeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_time"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>