<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.entry.SetProfileActivity"
    android:background="@drawable/white_background_rounded_border">

    <TextView
        android:id="@+id/errorTV"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="12sp"
        android:textColor="#ffffff"
        android:background="#EE0000"
        android:text="ERROR"
        android:textStyle="bold"
        android:gravity="center"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_message_special_50dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_up_profile"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_email_and_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />
    <TextView
        android:id="@+id/enter_email_and_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:elevation="20dp"
        android:background="@drawable/white_background_rounded_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photoIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:src="@drawable/ic_account_circle_grey"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            android:onClick="importImage"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="\@"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/special"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/usernameET"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:hint="@string/username"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person"/>
            <EditText
                android:id="@+id/nameET"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:hint="@string/name"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_bio"/>
            <EditText
                android:id="@+id/bioET"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:hint="@string/bio"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <Button
            android:id="@+id/finishButton"
            android:text="@string/finish"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/special_background_rounded_border" />
    </LinearLayout>



    <TextView
        android:id="@+id/accepting_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_creating_an_account_you_agree_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"/>

    <TextView
        android:id="@+id/termsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accepting_terms"
        app:layout_constraintVertical_bias="0.263"
        android:onClick="toTermsAndConditions"/>


</androidx.constraintlayout.widget.ConstraintLayout>