<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.core.ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photoIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:src="@drawable/ic_account_circle_grey"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="2dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="\@"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/special"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/usernameTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/username"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person"/>
                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/name"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_bio"/>
                <TextView
                    android:id="@+id/bioTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/bio"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_location_special"/>
                <TextView
                    android:id="@+id/countryTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/country"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_photos"/>
                <TextView
                    android:id="@+id/galleryTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/pictures"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="@drawable/white_background_border"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/emptyGalleryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:text="@string/no_pictures_to_display"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/galleryVP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.viewpager.widget.ViewPager>
                <ProgressBar
                    android:id="@+id/galleryPB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/galleryDotsLL"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="@drawable/white_background_border"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/messageButton"
                android:text="@string/message"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/special_background_rounded_border"
                android:onClick="message"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>